# tire

./: .clang-format  .clang-tidy  .clangd  .gitignore  .gitmodules  CMakeLists-old.txt  CMakeLists.txt  Makefile  README.md  README.txt  compile_flags.txt
001_fullhouse/: Makefile  README.md
001_fullhouse/assets/: RobotoMono-1024-512-32-64-alpha.tga  RobotoMono-2048-512-64-64.tga
001_fullhouse/src/: bitmap.cpp  bitmap.h  bitmap_text.cpp  bitmap_text.h  mainApp.cpp  mainApp.h  mesh.cpp  mesh.h  mtrx3.h  mtrx4.cpp  mtrx4.h  plane.cpp  plane.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h
002_webgl/: Makefile  README.md  index.html  webgl_cube.js
002_webgl/src/: mtrx4.ts  test.ts  test2.ts  tsconfig.json  vec3.ts
002_webgl_cube/src/: common.ts  mtrx4.ts  test.ts
003_nodejs_glfw/: Makefile  test.js
003_nodejs_glfw/src/: test.ts
003_webgl_fullhouse/: Makefile  README.md  cube.js  index.html  tsconfig.json
003_webgl_fullhouse/src/: common.ts  geometry.ts  main.ts  mtrx4.ts  qtnn.ts  shaders.ts  test2.ts  tsconfig.json  vec2.ts  vec3.ts
004_fullhouse2/: Makefile  Makefile-nix
004_fullhouse2/src/: apputils.cpp  apputils.h  bitmap.cpp  bitmap.h  camera.cpp  camera.h  font_string.h  main.cpp  mesh.cpp  mesh.h  screen_text.cpp  screen_text.h
004_glfw_go/: README.md
004_glfw_go/src/: bitmap.go  common.go  main.go  mtrx2.go  mtrx3.go  mtrx4.go  qtnn.go  tga.go  tgaread.go  vec2.go  vec3.go  vec4.go
005_rocket/: Makefile  README.md
005_rocket/assets/: RobotoMono-2048-1024-64-128.tga
005_rocket/src/: algebra2.h  algebra2_common.h  bitmap.h  bitmap_text.cpp  bitmap_text.h  main.cpp  mtrx2.cpp  mtrx2.h  mtrx3.cpp  mtrx4.cpp  mtrx4.h  plane.h  qtnn.cpp  qtnn.h  vec3.cpp  (+3 more)
006_rocket_nix/: Makefile  README.md
007_webgl_server/: index.html  tsconfig.json
008_canvas/: Makefile  canvas.cpp  test.cpp
009_sdl2_canvas/: Makefile  canvas.cpp  sdl2_canvas.cpp
010_nix_opengl_init/: mainApp.cpp  mainApp.h  timer.h
011_win_opengl_init/: Makefile  win_opengl_init.cpp  win_opengl_init.h
012_win_SDL2_init/: Makefile  bmp.h  win_SDL2_init.cpp  win_SDL2_init.h
013_windows_native_window/: Makefile
014_bullet_example/: Makefile  Makefile-nix
015_box_test/: Makefile  README.md
016_imgui_test/: Makefile  README.md
017_water/: Makefile
018_metaballs/: Makefile
019_modern_gl/: Makefile
019_ogl_modern_render_py/: main.py  ogl_utils.py
020_clang/: Makefile
020_ogl_old_nix_py/: main.py
algebra/: algebra2.h  cmplx.cpp  cmplx.h  common.h  mtrx2.cpp  mtrx2.h  mtrx3.cpp  mtrx3.h  mtrx4.cpp  mtrx4.h  plane.h  qtnn.h  vec2.cpp  vec2.h  vec3.cpp  vec3.h  vec4.cpp  vec4.h
algebra_c/: algebra.h  algebra_c.h  common.c  mtrx3.c  mtrx4.c  vec2.c  vec3.c  vec4.c
apps/: CMakeLists.txt  config.json
apps/bare/: bare.cpp  bare.h  command_buffer.cpp  context_bare.cpp  context_bare.h  device.cpp  instance.cpp  main.cpp  swapchain.cpp  vk.cpp  window.cpp  window.h
apps/ed/: tiredapplication.h
apps/qt/: appearance.cpp  appearance.h  context_qt.cpp  context_qt.h  main.cpp  render_item.cpp  render_item.h  vk.cpp  window.cpp  window.h
apps/qt/qml/: main.qml
apps/qt/qml/assets/: colors.json
apps/qt/qml/components/: Bin.qml  Bookmark.qml  NpButton.qml  Panel.qml  Texting.qml
apps/r/: main.cpp  window.cpp  window.h
assets/: Makefile  config.json  default_cube.json  figures.json  m01.json  scene.json  two_cubes.json
canvas/: Makefile  canvas.cpp  canvas.h  test.cpp
config/: Config.cpp
geometry/: Basics.cpp  Basics.h  IGeometry.cpp  Polytope.cpp  Polytope.h  Transformations.cpp
img/: bitmap.h  bitmap_text.cpp  bmp.cpp  bmp.h  image.cpp  image.h  img.mk  jpeg.cpp  jpeg.h  mainApp.cpp  mainApp.h  test.cpp  tga.cpp  tga.h
img_fonts/: RobotoMono-2048-1024-64-128-alpha.tga
nix_opengl_init/: main.cpp  mainApp.cpp  mainApp.h  mesh.cpp  nix_opengl_init.mk  timer.h
render/: IRender.cpp  Render.cpp  Render.h  RenderGL.cpp  RenderGL.h  RenderGLFW.cpp  RenderVK.cpp  RenderVK.h  RenderVKDisplay.cpp  RenderX11.cpp
screen/: GLFWScreen.cpp  GLFWScreen.h  IScreen.cpp  Render.cpp  RenderGL.cpp  RenderGLFW.cpp  RenderSDL.cpp  RenderSF.cpp  RenderVK.cpp  RenderX11.cpp  SDLScreen.cpp  Screen.cpp  Screen.h  X11Screen.cpp  X11Screen.h
sdl2_canvas/: Makefile  canvas.h  sdl2_canvas.cpp  sdl2_canvas.h
shaders/: Makefile  bbox_corner.frag  bbox_corner.vert  grid.frag  grid.vert  testbox.frag  testbox.vert  vk_simpleTri_FRAGMENT.glsl  vk_ui_FRAGMENT.glsl  vk_ui_VERTEX.glsl  vk_vertexBuffer_FRAGMENT.glsl  vk_vertexBuffer_VERTEX.glsl
src/: main.cpp  tiredapplication.cpp  tiredapplication.h  window.cpp  window.h
src/004_fullhouse2/: CMakeLists.txt  Makefile  README.md  apputils.cpp  apputils.h  base64.cpp  bitmap.cpp  bitmap.h  font_string.h  main.cpp  screen_text.cpp  screen_text.h  timing.h
src/004_fullhouse2/src/: apputils.cpp  apputils.h  base64.h  bitmap.cpp  bitmap.h  main.cpp  mesh.cpp  mesh.h  screen_text.cpp  screen_text.h  timing.cpp
src/005_rocket/: .clangd  CMakeLists.txt  bitmap_text.cpp  bitmap_text.h  main.cpp
src/005_rocket/src/: bitmap.h  bitmap_text.cpp  bitmap_text.h  main.cpp
src/008_canvas/: CMakeLists.txt  canvas.cpp  canvas.h  test.cpp
src/015_box_test/: CMakeLists.txt  Makefile  apputils.h  bitmap.cpp  bitmap.h  camera.h  compile_flags.txt  main.cpp  matbase.cpp  matbase.h  mesh.cpp  mesh.h  screen_text.cpp  screen_text.h
src/015_box_test/src/: apputils.h  bitmap.h  camera.cpp  main.cpp  matbase.h  mesh.cpp  mesh.h  screen_text.cpp  screen_text.h  timing.cpp  timing.h
src/018_metaballs/: CMakeLists.txt  apputils.h  bitmap.h  compile_flags.txt  main.cpp
src/021_obj_test/: CMakeLists.txt  compile_flags.txt  main.cpp
src/vk-basic/: CMakeLists.txt  compile_flags.txt  main.cpp
test/: CMakeLists.txt
test/algebra/: CMakeLists.txt  matrix.cpp  test.cpp
timer/: Makefile  test.cpp  timer.h
vsgQt/: CMakeLists.txt
vsgQt/include/vsgQt/: Window.h
vsgQt/src/vsgQt/: CMakeLists.txt  Viewer.cpp  Window.cpp
win_SDL2_init/: win_SDL2_init.cpp  win_SDL2_init.h  win_SDL2_init.mk
win_opengl_init/: win_opengl_init.cpp  win_opengl_init.h  win_opengl_init.mk
(+886 files in other folders)
